[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/weapons/weapon.gd" type="Script" id=1]
[ext_resource path="res://assets/sword.png" type="Texture" id=2]

[node name="Weapon" type="Node2D"]
use_parent_material = true
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform" ]
holster_offset = Vector2( 52, 0 )
hit_range = 50

[node name="KnockbackTween" type="Tween" parent="."]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="Pivot" type="Position2D" parent="."]
editor/display_folded = true
use_parent_material = true
_sections_unfolded = [ "Material", "Transform" ]

[node name="Area2D" type="Area2D" parent="Pivot"]
use_parent_material = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Material", "Transform" ]

[node name="Sprite" type="Sprite" parent="Pivot/Area2D"]
use_parent_material = true
texture = ExtResource( 2 )
_sections_unfolded = [ "Material" ]

[node name="U_Hand_Pivot" type="Position2D" parent="Pivot/Area2D/Sprite"]
use_parent_material = true

[node name="L_Hand_Pivot" type="Position2D" parent="Pivot/Area2D/Sprite"]
use_parent_material = true
z_index = -1
_sections_unfolded = [ "Z Index" ]

[node name="Hitbox" type="CollisionShape2D" parent="Pivot/Area2D"]
use_parent_material = true
_sections_unfolded = [ "Material" ]

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="ComboTimer" type="Timer" parent="."]
process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
